# TerraspaceWorld-Front-end

./: .gitignore  deploy.md  json_update.js  nohup.out  package-lock.json  package.json  script.js  tsconfig.json
components/: dumy.tsx  header.tsx
components/Dashboard/: index.tsx  styles.tsx
components/DashboardChartView/: index.tsx  styles.tsx
components/Drops/: index.tsx  styles.tsx
components/ExploreExclusive/: index.tsx  styles.tsx
components/HighestSales/: index.tsx
components/Home/: index.tsx  styles.tsx
components/HomeHero/: index.tsx  styles.tsx
components/NewCollections/: index.tsx  styles.tsx
components/PopularCollection/: index.tsx  styles.tsx
components/SearchBox/: index.tsx  styles.tsx
components/Shared/: SvgIcons.tsx
components/SingleCollectionCard/: index.tsx  styles.tsx
components/SingleCommunityCard/: index.tsx  styles.tsx
components/SingleExploreCard/: index.tsx  styles.tsx
components/SingleMarketCapCard/: index.tsx  styles.tsx
components/SinglePopularCard/: index.tsx  styles.tsx
components/SingleRankCard/: index.tsx  styles.tsx
components/SingleTopTokenCard/: index.tsx
components/Stake/: index.tsx  (+1 more)
contexts/: CollectionContext.tsx  wallet.tsx
contracts/nft-staking/: Cargo.toml  build.sh
contracts/nft-staking/src/: external.rs  internal.rs  lib.rs  nft_callbacks.rs  staking.rs  staking_views.rs  token.rs
pages/: _app.tsx  dashboard.tsx  dashboard_v1.tsx  drops.tsx  index.tsx  index_v1.tsx  mint.tsx  stake.tsx  stake_v1.tsx111  staking111.tsx111
styles/: globals.css
utils/: bignumber.tsx  paraApi.tsx
(+33 files in other folders)
