[package]
name = "terraspace_staking"
version = "0.1.0"
authors = ["CleverSos"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=3.1.0"
chrono = "0.4"


[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
